[project]
name = "cache-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luna", email = "itsactuallyluna9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.2",
]

[project.scripts]
cache-simulator = "cache_simulator:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
